--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,43 @@
-# Compiled class file
+# ignore IntelliJ
+*.xml
+.idea
+out/
+
+# ignore object and class files
+*.o
 *.class
 
-# Log file
-*.log
+# ignore libraries
+*.lib
+*.a
 
-# BlueJ files
-*.ctxt
+# ignore shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# ignore executables
+*.exe
+*.out
+*.app
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# ignore metada files
+.metadata
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# ignore project files
+.settings
 
-.idea
+# ignore temporary editor files
+*~
+\#*\#
+.\#*
+
+# ignore Mac OS X specific files
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
